--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
         "ms-vscode.powershell",
         "waderyan.gitblame",
         "donjayamanne.githistory",
-        "rebornix.project-snippets"
+        "rebornix.project-snippets",
+        "ban.spellright",
+        "eamodio.gitlens"
     ]
 }
