--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
-        "robertohuertasm.vscode-icons",
+        "vscode-icons-team.vscode-icons",
         "ms-vscode.powershell",
         "waderyan.gitblame",
         "donjayamanne.githistory",
